# bloom-embed

./: README.md  pyproject.toml
bloom_embed/: __init__.py
