[tool.poetry]
name = "bloom-embed"
version = "0.1.0"
description = ""
authors = ["kavorite <kavorite@gmail.com>"]
readme = "README.md"
packages = [{include = "bloom_embed"}]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
